--- a/dashboard.html
+++ b/dashboard.html
@@ -21,37 +21,66 @@
     </header>
 
     <section>
-        <h2>Studieoverzicht</h2>
+        <h2>Studievoortgangsoverzicht</h2>
         <table>
-            <tr>
-                <th>Vak</th>
-                <th>Periode</th>
-                <th>N.V.T</th>
-            </tr>
-            <tr>
-                <td>Programmeren</td>
-                <td>Q1</td>
-                <td>N.V.T</td>
-            </tr>
-            <tr>
-                <td>Netwerken</td>
-                <td>Q1</td>
-                <td>N.V.T</td>
-            </tr>
-            <tr>
-                <td>Databasebeheer</td>
-                <td>Q2</td>
-                <td>N.V.T</td>
-            </tr>
-            <tr>
-                <td>Webontwikkeling</td>
-                <td>Q2</td>
-                <td>N.V.T</td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Onderdeel</th>
+                    <th>Type</th>
+                    <th>Minimum te behalen punten</th>
+                    <th>Behaalde punten</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Basisprogramma</td>
+                    <td>Verplicht</td>
+                    <td>60,0</td>
+                    <td>0,0</td>
+                    <td>Nee</td>
+                </tr>
+                <tr>
+                    <td>Blok 1: Introduction to computer science</td>
+                    <td>Verplicht</td>
+                    <td>25,0</td>
+                    <td>0,0</td>
+                    <td>Nee</td>
+                </tr>
+                <tr>
+                    <td>Blok 2: Game development</td>
+                    <td>Verplicht</td>
+                    <td>10,0</td>
+                    <td>0,0</td>
+                    <td>Nee</td>
+                </tr>
+                <tr>
+                    <td>Blok 3: Modern software development 1</td>
+                    <td>Verplicht</td>
+                    <td>12,5</td>
+                    <td>0,0</td>
+                    <td>Nee</td>
+                </tr>
+                <tr>
+                    <td>Blok 4: Modern software development 2</td>
+                    <td>Verplicht</td>
+                    <td>10,0</td>
+                    <td>0,0</td>
+                    <td>Nee</td>
+                </tr>
+                <tr>
+                    <td>Personality</td>
+                    <td>Verplichte keuze</td>
+                    <td>2,5</td>
+                    <td>0,0</td>
+                    <td>Nee</td>
+                </tr>
+            </tbody>
         </table>
     </section>
 
     <footer>
+
         <p>&copy; 2024 Saeed's Website</p>
     </footer>
 </body>
