--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="header-container">
             <!-- HZ logo links -->
             <div class="logo-left">
-                <img src="foto/hz-logo.jpg" alt="HZ Logo">
+                <img src="foto/hz-logo.png" alt="HZ Logo">
             </div>
 
             <!-- Titel en navigatie -->
